ethereum ws using rust

--- a/RUST/ethereum/ethereum-connect-http/Cargo.toml
+++ b/RUST/ethereum/ethereum-connect-http/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ethers = "2.0"
+ethers = { version = "2.0", features = ["ws", "rustls"] }
 # Ethers' async features rely upon the Tokio async runtime.
 tokio = { version = "1", features = ["macros"] }
 # Flexible concrete Error Reporting type built on std::error::Error with customizable Reports
