--- a/RUST/rest_api_client/Cargo.toml
+++ b/RUST/rest_api_client/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 reqwest = "0.12.4"
+tokio = { veriosn = "1.36.0", features = ["macros", "rt-multi-thread"] }
+serde_json = "1.0.116"
