--- a/ether-rs-projects/communication/Cargo.toml
+++ b/ether-rs-projects/communication/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+dotenv = "0.15.0"
 ethers = { version = "2.0", features = ["rustls", "ws"] }
 tokio = { version = "1", features = ["macros"] }
-eyre = "0.6"
 
 [toolchain]
 channel = "nightly"
