--- a/ether-rs-projects/communication/Cargo.toml
+++ b/ether-rs-projects/communication/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 dotenv = "0.15.0"
-ethers = { version = "2.0", features = ["rustls", "ws"] }
+ethers = { version = "2.0", features = ["rustls", "ws", "solc"] }
 tokio = { version = "1", features = ["macros"] }
 serde_json = "1.0.116"
 eyre = "0.6.12"
